==Latest==
* Fixed Disk II sound problem when pausing/waking up
* Implemented Apple II cassette out option
* Implemented Apple II speaker tension/relaxation
* Restored support for Mac OS X 10.5 (Intel)
* Fixed crash when writing to a DSK file
* Added PH1 inhibiting writing in Disk II
* Modified mouse release message to "Press CTRL+OPTION to release mouse."
* Fixed crash when replacing monitors
* Implemented power/reset signals as global emulation properties
* Added F12 reset key for Apple II
* Added CFFA ROM 1.2 and ROM 1.0 firmware
* Fixed disk image extension detection in libdiskimage
* Implemented Apple III MOS6502
* Implemented Apple III keyboard
* Implemented Apple III framework

==1.0.3 17/07/2012==
* Fixed OEDocument retain/release madness
* Fix OEEmulation update()
* Fixed ControlBus cycles problem when powering off/on (time was running backwards)
* Improved Disk II sounds
* Added libdiskimage disk image write support
* Added common utility library
* Improved libdiskimage NIB decoding support
* Added Disk II mechanical phase emulation
* Implemented Disk II disk writes
* Fixed Disk II read sequencer
* Implemented MC3470 spurious bit reads in Disk II Drive
* Fixed Disk II sometimes not booting
* Fixed Videoterm not showing video after installing, adding monitor and doing PR#3
* Fixed Videoterm last line
* Implemented ATA Device size limit for the CFFA card
* Fixed OE framework update problem
* Implemented libdiskimage VDI and VMDK support
* Implemented force write protected in ATADevice
* Fixed libdiskimage GCR53
* Renamed VideoRAM to VRAM
* Fixed CFFA ATA identify
* Fixed keyboard UNICODE + Apple II madness
* Removed BankSwitchedRAM, moved bank switching to AddressOffset
* Implemented ATADevice
* Refactorized RDCFFA+RDCFFA1 into ATAController and RDCFFA
* Fixed minor bug in component lifecycle
* Fixed Apple II mouse capture
* Simplified peripherals to self-map memory using AddressMapper
* Implemented sample-accurate AudioPlayer playback